# brainfuck_cpp

./: CMakeLists.txt  README.md  main.cpp
cmd/: arithmetic.h  io.h  loop.h  program.h  shift.h
code_gen/: code_gen.cpp  code_gen.h
examples/: cat.bf  random.bf  wc.bf
lex/: lexer.cpp  lexer.h  token.h
optimize/: folder.cpp  folder.h  optimizer.cpp  optimizer.h
parse/: parser.cpp  parser.h
